added translantions and simple ui usecase on hamburger menu

--- a/locales/pt.json
+++ b/locales/pt.json
@@ -1,4 +1,6 @@
 {
     "test":"teste",
-    "header":"cabeçalho"
+    "header":"cabeçalho",
+    "appearance":"Aparência",
+    "language":"Língua"
 }
