proper styling to contact form and success handling, todo error handling

--- a/locales/en.json
+++ b/locales/en.json
@@ -2,5 +2,9 @@
     "test":"test",
     "header":"header",
     "appearance":"Appearance",
-    "language":"Language"
+    "language":"Language",
+    "name":"Name",
+    "message":"Message",
+    "contact-me":"Contact Me",
+    "send":"Send"
 }
