--- a/locales/pt.json
+++ b/locales/pt.json
@@ -2,5 +2,9 @@
     "test":"teste",
     "header":"cabeçalho",
     "appearance":"Aparência",
-    "language":"Língua"
+    "language":"Língua",
+    "name":"Nome",
+    "message":"Mensagem",
+    "contact-me":"Contate-me",
+    "send": "Enviar"
 }
