added translations to successMessage of the form

--- a/locales/pt.json
+++ b/locales/pt.json
@@ -6,5 +6,6 @@
   "name": "Nome",
   "message": "Mensagem",
   "contact-me": "Contate-me",
-  "send": "Enviar"
+  "send": "Enviar",
+  "successMessage": "E-mail enviado com sucesso!"
 }
