--- a/locales/en.json
+++ b/locales/en.json
@@ -6,5 +6,6 @@
   "name": "Name",
   "message": "Message",
   "contact-me": "Contact Me",
-  "send": "Send"
+  "send": "Send",
+  "successMessage": "Email sent successfully!"
 }
