added error message and handle  to contact form

--- a/locales/en.json
+++ b/locales/en.json
@@ -7,5 +7,6 @@
   "message": "Message",
   "contact-me": "Contact Me",
   "send": "Send",
-  "successMessage": "Email sent successfully!"
+  "successMessage": "Email sent successfully!",
+  "errorMessage": "Oops an error has occurred, please try again later!"
 }
