certs and certsModal fixed

--- a/locales/pt.json
+++ b/locales/pt.json
@@ -8,5 +8,6 @@
   "contact-me": "Contate-me",
   "send": "Enviar",
   "successMessage": "E-mail enviado com sucesso!",
-  "errorMessage": " Woops, ocorreu um erro, tente novamente mais tarde!"
+  "errorMessage": " Woops, ocorreu um erro, tente novamente mais tarde!",
+  "certsSection": "Certificados e Diplomas"
 }
