--- a/locales/en.json
+++ b/locales/en.json
@@ -8,5 +8,6 @@
   "contact-me": "Contact Me",
   "send": "Send",
   "successMessage": "Email sent successfully!",
-  "errorMessage": "Oops an error has occurred, please try again later!"
+  "errorMessage": "Oops an error has occurred, please try again later!",
+  "certsSection": "Certificates & Diplomas"
 }
