--- a/locales/en.json
+++ b/locales/en.json
@@ -9,5 +9,6 @@
   "send": "Send",
   "successMessage": "Email sent successfully!",
   "errorMessage": "Oops an error has occurred, please try again later!",
-  "certsSection": "Certificates & Diplomas"
+  "certsSection": "Certificates & Diplomas",
+  "skills": "Skills"
 }
