--- a/locales/pt.json
+++ b/locales/pt.json
@@ -10,5 +10,11 @@
   "successMessage": "E-mail enviado com sucesso!",
   "errorMessage": " Woops, ocorreu um erro, tente novamente mais tarde!",
   "certsSection": "Certificados e Diplomas",
-  "skills": "Competências"
+  "skills": "Competências",
+  "projects": "Projetos",
+  "Section 1": "Sobre Mim",
+  "Section 2": "Projetos",
+  "Section 3": "Competências",
+  "Section 4": "Certificados e Diplomas",
+  "Section 5": "Contate-me"
 }
