--- a/locales/en.json
+++ b/locales/en.json
@@ -18,5 +18,6 @@
   "Section 3": "Skills",
   "Section 4": "Certificates & Diplomas",
   "Section 5": "Contact Me",
-  "academics": "Academic Background"
+  "academics": "Academic Background",
+  "incomplete": "Incomplete"
 }
