--- a/locales/pt.json
+++ b/locales/pt.json
@@ -18,5 +18,6 @@
   "Section 3": "Competências",
   "Section 4": "Certificados e Diplomas",
   "Section 5": "Contate-me",
-  "academics": "Formação Académica"
+  "academics": "Formação Académica",
+  "incomplete": "Incompleto"
 }
